css changes - fixing some bugs of  the responsive for partner details

--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -2256,7 +2256,7 @@ a.more-link{
 		}
 	}
 }
-div[id ^= "mini-panel-partner_in_country"]{
+div[id ^= "mini-panel-partner_in_"], {
 	.panels-flexible-row-inside-first{
 		background-color: @color-white !important;
 		border-bottom: 2px solid @color-text-purple-darker;
