--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -1170,7 +1170,7 @@ h1.page-header {
 			margin-left: 0px !important;
 			margin-right: 0px !important;
 		}
-		div[id ^= "mini-panel-partner_in_country"]{
+		div[id ^= "mini-panel-partner_in_"]{
 			overflow: hidden;
 			.panels-flexible-row-new-1{
 				border-bottom: none;
