--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
@@ -527,7 +527,7 @@
 .partners-no-1{
 	margin-bottom: 0px;
 }
-div[id ^= "mini-panel-partner_in_country"]{
+div[id ^= "mini-panel-partner_in_"]{
 	.panels-flexible-row-new-1{
 		border-bottom: 2px solid @color-text-purple-darker;
 	}
