--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -2448,6 +2448,21 @@ div[id ^= "mini-panel-partner_in_"], {
 			}
 		}
 	}
+	.focal-poin-partner-text{
+		padding-left: 45px;
+		padding-right: 45px;
+	}
+}
+
+.focal-poin-partner-text{
+	margin-top: 5px;
+	margin-bottom: 15px;
+	a{
+	font-style: italic;
+		&:before{
+			content:" > ";
+		}
+	}
 }
 
 //partners and countries resources
