--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -1071,6 +1071,10 @@ h1.page-header {
 				}
 			}
 		}
+		.focal-poin-partner-text{
+			padding-left: 0px;
+			padding-right: 0px;
+		}
 	}
 }
 //partners and countries resources
