--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -764,6 +764,13 @@ a.more-link{
 				}
 			}
 		}
+		.view-display-id-block_1{
+			.more-link{
+				a{
+					font-size: 1.3em;
+				}
+			}
+		}
 	}
 	.view-display-id-block_1{
 		.views-item-columns-container{
