css changes - NOW 155, 183

--- a/docroot/sites/all/themes/oira_frontend/less/variables.less
+++ b/docroot/sites/all/themes/oira_frontend/less/variables.less
@@ -905,6 +905,7 @@
 @color-menu-hover: #37d0ff;
 @color-white: #FFFFFF;
  
+@color-tags: #b4a4bf;
 @color-menu-icons: #003399;
 @color-icon-white: @color-white;
 @color-icon-purple: @color-primary-dark;
