--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -213,25 +213,49 @@ a.more-link{
 .field-name-field-sector,
 .field-name-field-promotional-material-type,
 .field-name-pr-language{
-    background-color: #10b2e4;
-    display: inline-block;
-    color: white;
-    padding: 3px 16px;
-    font-size: 0.9em;
+    display: block;
+    color: @color-text-grey;
+    font-size: 0.em;
     font-weight: bold;
     font-style: italic;
-    margin-top: 1em;
-    margin-right: 5px;
     p{
     	margin-bottom: 0px;
     }
 }
 
+/*Etiquetas azuler de pais e idioma*/
+.oira-tools-search-page,
+.page-promotional-resources-search,
+.page-search-site{
+	.field.field-name-field-country,
+	.field-type-language-field,
+	.field-name-field-sector,
+	.field-name-field-promotional-material-type,
+	.field-name-pr-language{
+	    background-color: @color-tags;
+	    display: inline-block;
+	    color: white;
+	    padding: 2px 10px;
+	    font-size: 0.8em;
+	    font-weight: bold;
+	    font-style: italic;
+	    margin-top: 0em;
+	    margin-right: 5px;
+	    border-radius: 15px;
+	    p{
+	    	margin-bottom: 0px;
+	    }
+	}
+}
+.page-search-site{
+	.field-name-pr-language{
+		margin-bottom: 20px;
+	}
+}
+
 .alert.alert-block.alert-info{
 	border: 0px;
 	background-color: @color-primary;
-	margin-left: 15px;
-	margin-right: 15px;
 	p{
 		margin-bottom: 0px !important;
 		span{
@@ -545,6 +569,41 @@ a.more-link{
 					}
 				}
 				.views-field-field-link{
+				    position: inherit !important;
+				    width: 100% !important;
+				    background-color: @color-primary-dark;
+				    margin-top: -7px;
+				    padding-top: 25px;
+				    padding-left: 15px;
+				    padding-right: 15px;
+				    a{
+						color: @color-white;
+						font-size: 1.2em;
+					}
+				    h2{
+				    	margin-top: 0px;
+		    			margin-bottom: 0px;
+		    			//width: 1140px;
+		    			display: block;
+		    			margin: 0 auto;
+				    }
+				}
+				.views-field-body {
+				    position: inherit !important;
+				    width: 100% !important;
+				    background-color: @color-primary-dark;
+				    padding-top: 10px;
+				    padding-bottom: 55px;
+				    padding-left: 15px;
+				    padding-right: 15px;
+				    color: @color-white;
+				    .field-content{
+				    	//width: 1140px;
+				    	margin: 0 auto;
+				    }
+				}
+				/*
+				.views-field-field-link{
 					position: absolute;
 					//width: 1140px;
 					top: 45%;
@@ -566,6 +625,7 @@ a.more-link{
 					margin-right: 10%;
 					font-size: @font-size1-3;
 				}
+				*/
 			}
 			.owl-controls.clickable{
 				position: absolute;
@@ -611,7 +671,7 @@ a.more-link{
 		.views-item-columns-container{
 			background-color: @color-white;
 			padding: 15px;
-			min-height: 260px;
+			//min-height: 260px;
 
 			a.more-link{
 				color: @color-see-more;
@@ -654,7 +714,7 @@ a.more-link{
 				}
 				.views-item-columns-container{
 					background-color: @color-background-light-purple;
-					min-height: 320px;
+					//min-height: 320px;
 					.materials-content-wrapper{
 						padding: 15px;
 						overflow: hidden;
@@ -767,7 +827,7 @@ a.more-link{
 		.view-display-id-block_1{
 			.more-link{
 				a{
-					font-size: 1.3em;
+					//font-size: 1.3em;
 				}
 			}
 		}
@@ -848,12 +908,9 @@ a.more-link{
 					font-size: 32px;
 				}
 				.views-view-grid{
-					margin-top: 30px;
 					margin-bottom: 15px;
 					padding-bottom: 40px;
-					padding-top: 20px;
 					border-bottom: 2px solid @color-text-purple;
-					border-top: 2px solid @color-text-purple;
 					.col-md-2.col-sm-3.col-xs-6{
 						.views-field-field-logo{
 							height: 160px;
@@ -1305,7 +1362,7 @@ a.more-link{
 				padding-top: 20px;
 				.views-item-columns-container{
 					background-color: @color-primary;
-					min-height: 535px;
+					min-height: 489px;
 					.views-field-field-image{
 						min-height: 202px;//testing
 						padding: 10px;
@@ -3755,6 +3812,12 @@ div[id ^= "mini-panel-partner_in_"], {
 /* Countries with more than two partners
 *************************************************/
 .more-than-two-partners{
+	.view-display-id-block_1 .views-item-columns-container{
+		padding: 0px !important;
+		.views-field.views-field-field-logo{
+			min-height: 175px;
+		}
+	}
 	.view-id-oira_partners{
 		img{
 			padding: 15px;
