--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -204,7 +204,7 @@ h1.page-header {
 		    			display: none !important;
 		    		}
 		    		.views-field-field-link{
-		    			background-color: inherit;
+		    			background-color: white !important;
 		    			h2{
 		    				a{
 		    					color: @color-primary-dark !important;
@@ -212,7 +212,7 @@ h1.page-header {
 		    			}
 		    		}
 		    		.views-field-body{
-		    			background-color: inherit;
+		    			background-color: white !important;
 		    			color: @color-primary-dark !important;
 		    		}
 		    	}
