--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -1638,11 +1638,13 @@ a.more-link{
 							}
 							.field-name-field-tool-link{
 								a{
+									position: absolute;
+									right: 15px;
 									color: @color-text-grey;
 								    font-weight: bold;
-								    margin-top: 30px;
+								    margin-top: 15px;
 								    display: block;
-								    margin-bottom: 15px;
+								    //margin-bottom: 15px;
 									span.glyphicon-new-window{
 										color: @color-see-more;
 										margin-left: 10px;
@@ -1651,6 +1653,7 @@ a.more-link{
 							}
 							//partners inside oira tools
 							.field-name-related-partners{
+								margin-top: 50px;
 								.node-partner{
 									background-color: @color-primary-dark;
     								padding: 15px;
