--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -471,15 +471,13 @@ a.more-link{
 }
 
 //tags span country, language, sector
-.view-display-id-block{
-	article > div{
-		> span{
-		float: left;
-		}
+.custom-label{
+	span, > div{
+		display: inline-block;
 	}
-}
-.views-item-columns-container > div > div > div > span{
-	float: left;
+	span{
+		margin-right: 5px;
+	}
 }
 
 /*END estilos comunes
