--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -561,25 +561,34 @@ a.more-link{
 	.panels-flexible-row-new-6{
 		.pane-tools{
 			.view-display-id-block_1{
-				.field.field-name-field-country,
-				.field-type-language-field,
-				.field-name-field-sector,
-				.field-name-field-promotional-material-type,
-				.field-name-pr-language{
-				    background-color: @color-tags;
-				    display: inline-block;
-				    color: white;
-				    padding: 2px 10px;
-				    font-size: 0.8em;
-				    font-weight: bold;
-				    font-style: italic;
-				    margin-top: 0em;
-				    margin-right: 5px;
-				    border-radius: 15px;
-				    margin-bottom: 15px;
-				    p{
-				    	margin-bottom: 0px;
+				.field-name-field-country{
+					background-color: none;
+					font-weight: bold;
+				    &:before{
+				    	content:"Country: ";
+				    	font-weight: normal;
+				    	font-style: normal;
+				    	display: inline-block;
+				    	margin-right: 5px;
 				    }
+				    .field-items{
+						display: inline-block;
+				    }
+				}
+				.field-type-language-field{
+				    background-color: none;
+				    font-weight: bold;
+				    &:before{
+				    	content:"Language: ";
+				    	font-weight: normal;
+				    	font-style: normal;
+				    	display: inline-block;
+				    	margin-right: 5px;
+				    }
+				    .field-items{
+				    	display: inline-block;
+				    }
+				    
 				}
 				.field-name-field-tool-link{
 					position: absolute;
