css changes- NOW 254, 279, 280

--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -224,7 +224,7 @@ h1.page-header {
 
 	}
 	//latest news
-	.panels-flexible-region-new-news_section{
+	.panels-flexible-region-new-promotional_materials{
 		padding-bottom: 15px;
 		h3.pane-title{
 			color: @color-primary-dark;
@@ -251,7 +251,7 @@ h1.page-header {
 		}
     }
     //Promotional materials
-	.panels-flexible-region-new-promotional_materials{
+	.panels-flexible-region-new-news_section{
 		padding-bottom: 15px;
 		#mini-panel-promotional_materials{
 			.pane-promotional-materials{
@@ -337,6 +337,7 @@ h1.page-header {
 				position: relative;
 				.col-sm-6{
 					position: initial;
+					padding: 0px;
 				}
 	    		.field-type-image{
 	    			margin-top: 15px;
