--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -7624,6 +7624,9 @@ a.more-link:before {
   font-size: 1.2em;
   line-height: 0;
 }
+#block-system-main .panels-flexible-row-new-6 .view-display-id-block_1 .more-link a {
+  font-size: 1.2em;
+}
 #block-system-main .view-display-id-block_1 .views-item-columns-container {
   background-color: #ffffff;
   padding: 15px;
@@ -7665,13 +7668,6 @@ a.more-link:before {
 #block-system-main .view-display-id-block_1 .views-item-columns-container .field-name-related-partners .node-partner .more-link {
   color: #ffffff;
   text-align: left;
-}
-#block-system-main .pane-views.pane-tools .pane-title {
-  color: #967ea7;
-  font-size: 1.2em;
-  font-weight: bold;
-  margin-bottom: 14px;
-  font-style: italic;
 }
 #block-system-main .panels-flexible-region-new-oira_partners .panels-flexible-region-new-oira_partners-inside h3:after {
   content: "";
@@ -12003,16 +11999,16 @@ div[id^="mini-panel-partner_in_"] .partner-text2-container a:hover {
   .front .panels-flexible-region-new-slider .owl-controls.clickable {
     display: none !important;
   }
-  .front .panels-flexible-region-new-news_section {
+  .front .panels-flexible-region-new-promotional_materials {
     padding-bottom: 15px;
   }
-  .front .panels-flexible-region-new-news_section h3.pane-title {
+  .front .panels-flexible-region-new-promotional_materials h3.pane-title {
     color: #786586;
   }
-  .front .panels-flexible-region-new-news_section .view-display-id-oshnews_latest .view-display-id-attachment_1 {
+  .front .panels-flexible-region-new-promotional_materials .view-display-id-oshnews_latest .view-display-id-attachment_1 {
     display: none;
   }
-  .front .panels-flexible-region-new-news_section .views-item-columns-container {
+  .front .panels-flexible-region-new-promotional_materials .views-item-columns-container {
     padding: 0px !important;
     background-color: initial !important;
     min-height: auto !important;
@@ -12020,20 +12016,20 @@ div[id^="mini-panel-partner_in_"] .partner-text2-container a:hover {
     padding-bottom: 15px !important;
     margin-bottom: 20px;
   }
-  .front .panels-flexible-region-new-news_section .views-item-columns-container .date-display-single {
+  .front .panels-flexible-region-new-promotional_materials .views-item-columns-container .date-display-single {
     color: #967ea7;
   }
-  .front .panels-flexible-region-new-news_section .views-item-columns-container .more-link {
+  .front .panels-flexible-region-new-promotional_materials .views-item-columns-container .more-link {
     text-align: left !important;
     margin-top: 5px !important;
   }
-  .front .panels-flexible-region-new-promotional_materials {
+  .front .panels-flexible-region-new-news_section {
     padding-bottom: 15px;
   }
-  .front .panels-flexible-region-new-promotional_materials #mini-panel-promotional_materials .pane-promotional-materials div.pane-title {
+  .front .panels-flexible-region-new-news_section #mini-panel-promotional_materials .pane-promotional-materials div.pane-title {
     border-bottom: 2px solid #967ea7;
   }
-  .front .panels-flexible-region-new-promotional_materials #mini-panel-promotional_materials .pane-promotional-materials .view-promotional-materials .views-item-columns-container {
+  .front .panels-flexible-region-new-news_section #mini-panel-promotional_materials .pane-promotional-materials .view-promotional-materials .views-item-columns-container {
     background-color: #ffffff;
     min-height: auto;
     border-bottom: 2px solid #967ea7;
@@ -12041,53 +12037,53 @@ div[id^="mini-panel-partner_in_"] .partner-text2-container a:hover {
     padding-bottom: 15px;
     overflow: hidden;
   }
-  .front .panels-flexible-region-new-promotional_materials #mini-panel-promotional_materials .pane-promotional-materials .view-promotional-materials .views-item-columns-container .views-field-field-image {
+  .front .panels-flexible-region-new-news_section #mini-panel-promotional_materials .pane-promotional-materials .view-promotional-materials .views-item-columns-container .views-field-field-image {
     width: 35%;
     float: left;
     margin-right: 15px;
     margin-bottom: 30px;
   }
-  .front .panels-flexible-region-new-promotional_materials #mini-panel-promotional_materials .pane-promotional-materials .view-promotional-materials .views-item-columns-container .materials-content-wrapper {
+  .front .panels-flexible-region-new-news_section #mini-panel-promotional_materials .pane-promotional-materials .view-promotional-materials .views-item-columns-container .materials-content-wrapper {
     padding: 0px 0px 0px 0px;
     overflow: inherit;
   }
-  .front .panels-flexible-region-new-promotional_materials #mini-panel-promotional_materials .pane-promotional-materials .view-promotional-materials .views-item-columns-container .materials-content-wrapper .field-name-title-field {
+  .front .panels-flexible-region-new-news_section #mini-panel-promotional_materials .pane-promotional-materials .view-promotional-materials .views-item-columns-container .materials-content-wrapper .field-name-title-field {
     min-height: auto;
   }
-  .front .panels-flexible-region-new-promotional_materials #mini-panel-promotional_materials .pane-promotional-materials .view-promotional-materials .views-item-columns-container .materials-content-wrapper .field-name-title-field h4 {
+  .front .panels-flexible-region-new-news_section #mini-panel-promotional_materials .pane-promotional-materials .view-promotional-materials .views-item-columns-container .materials-content-wrapper .field-name-title-field h4 {
     margin-top: 0px;
     margin-bottom: 0px;
     font-weight: bold;
     font-size: 1.2em;
   }
-  .front .panels-flexible-region-new-promotional_materials #mini-panel-promotional_materials .pane-promotional-materials .view-promotional-materials .views-item-columns-container .materials-content-wrapper span.tools-see-more.tools_see_more-processed {
+  .front .panels-flexible-region-new-news_section #mini-panel-promotional_materials .pane-promotional-materials .view-promotional-materials .views-item-columns-container .materials-content-wrapper span.tools-see-more.tools_see_more-processed {
     padding-left: 119px;
     display: block;
   }
-  .front .panels-flexible-region-new-promotional_materials #mini-panel-promotional_materials .pane-promotional-materials .view-promotional-materials .views-item-columns-container .field-name-related-partners {
+  .front .panels-flexible-region-new-news_section #mini-panel-promotional_materials .pane-promotional-materials .view-promotional-materials .views-item-columns-container .field-name-related-partners {
     overflow: inherit !important;
     margin-top: 15px;
     clear: both;
   }
-  .front .panels-flexible-region-new-promotional_materials #mini-panel-promotional_materials .pane-promotional-materials .view-promotional-materials .views-item-columns-container .field-name-related-partners .node-partner {
+  .front .panels-flexible-region-new-news_section #mini-panel-promotional_materials .pane-promotional-materials .view-promotional-materials .views-item-columns-container .field-name-related-partners .node-partner {
     background-color: #786586;
     padding: 15px;
     color: #ffffff;
     margin-top: 15px;
   }
-  .front .panels-flexible-region-new-promotional_materials #mini-panel-promotional_materials .pane-promotional-materials .view-promotional-materials .views-item-columns-container .field-name-related-partners .node-partner .group-left {
+  .front .panels-flexible-region-new-news_section #mini-panel-promotional_materials .pane-promotional-materials .view-promotional-materials .views-item-columns-container .field-name-related-partners .node-partner .group-left {
     padding-right: 0px;
   }
-  .front .panels-flexible-region-new-promotional_materials #mini-panel-promotional_materials .pane-promotional-materials .view-promotional-materials .views-item-columns-container .field-name-related-partners .node-partner h4 a {
+  .front .panels-flexible-region-new-news_section #mini-panel-promotional_materials .pane-promotional-materials .view-promotional-materials .views-item-columns-container .field-name-related-partners .node-partner h4 a {
     font-size: 0.9em;
     color: #ffffff;
     margin-top: 0px;
   }
-  .front .panels-flexible-region-new-promotional_materials #mini-panel-promotional_materials .pane-promotional-materials .view-promotional-materials .views-item-columns-container .field-name-related-partners .node-partner .more-link {
+  .front .panels-flexible-region-new-news_section #mini-panel-promotional_materials .pane-promotional-materials .view-promotional-materials .views-item-columns-container .field-name-related-partners .node-partner .more-link {
     color: #ffffff;
     text-align: left;
   }
-  .front .panels-flexible-region-new-promotional_materials #mini-panel-promotional_materials .pane-promotional-materials .view-promotional-materials .views-item-columns-container a.more-link {
+  .front .panels-flexible-region-new-news_section #mini-panel-promotional_materials .pane-promotional-materials .view-promotional-materials .views-item-columns-container a.more-link {
     text-align: left;
     margin-top: 5px;
   }
@@ -12105,6 +12101,7 @@ div[id^="mini-panel-partner_in_"] .partner-text2-container a:hover {
   }
   .front .panels-flexible-row-new-16 .panels-flexible-region-new-tools .view-display-id-block .col-sm-6 {
     position: initial;
+    padding: 0px;
   }
   .front .panels-flexible-row-new-16 .panels-flexible-region-new-tools .view-display-id-block .field-type-image {
     margin-top: 15px;
