--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -59,9 +59,6 @@ h3.pane-title{
 	border-bottom: 2px solid @color-text-purple;
 	font-size: @font-size2-2;
 	padding-bottom: 15px;
-	//font-weight: bold;
-	//margin-bottom: 25px;
-	//margin-top: 50px;
 	font-family: @font-family-base-2;
 }
 
@@ -888,7 +885,7 @@ a.more-link{
 		.view-display-id-block_1{
 			.more-link{
 				a{
-					//font-size: 1.3em;
+					font-size: 1.2em;
 				}
 			}
 		}
@@ -942,15 +939,15 @@ a.more-link{
 			}
 		}
 	}
-	.pane-views.pane-tools{
-		.pane-title{
-			color: @color-text-purple;
-			font-size: @font-size1-2;
-			font-weight: bold;
-			margin-bottom: 14px;
-			font-style: italic;
-		}
-	}
+	// .pane-views.pane-tools{
+	// 	.pane-title{
+	// 		color: @color-text-purple;
+	// 		font-size: @font-size1-2;
+	// 		font-weight: bold;
+	// 		margin-bottom: 14px;
+	// 		font-style: italic;
+	// 	}
+	// }
 	//Oira partners
 	.panels-flexible-region-new-oira_partners{
 		.panels-flexible-region-new-oira_partners-inside{
